Updated div content in index.html and updated flexbox grid styles in main.css

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
     <section class="wrapper">
         <div class="div-1">
-            Div 1
+            <p>I was born and raised in Southern California and have just recently moved to the Palm Springs area with my partner. We are really learning to love living the desert life!</p>
         </div>
         <div class="div-2">
-            Div 2
+            <p>My passion: I LOVE music - it's one of the most powerful and diverse methods for expression & communication. I hope to be able to go to more live concerts in the future.</p>
         </div>
         <div class="div-3">
-            Div 3
+           <p>A fun fact: As a true Southern Californian, when giving directions I really do say 'the' before naming different freeways! "Take the 5 to the 57 to the 91..."</p>
         </div>
     </section>
 
