Added header, main, and footer sections with content to index.html and styles to main.css

--- a/index.html
+++ b/index.html
@@ -24,15 +24,30 @@
         <![endif]-->
 
     <section class="wrapper">
-        <div class="div-1">
-            <p>I was born and raised in Southern California and have just recently moved to the Palm Springs area with my partner. We are really learning to love living the desert life!</p>
+        <header>
+            <h1>Hi. I'm Greg.</h1>
+        </header>
+        <main>
+            <p>I am a <span>Responsive Web Developer</span> dedicated to creating inclusive online spaces. With a keen
+                focus on accessibility, I combine technical expertise with a commitment to ensuring that websites are
+                usable by everyone. In my spare time, I swap coding for controllers, indulging in the world of gaming.
+            </p>
+        </main>
+        <div id="div-1" class="flex-items">
+            <p>I was born and raised in Southern California and have just recently moved to the Palm Springs area with
+                my partner. We are really learning to love living the desert life!</p>
         </div>
-        <div class="div-2">
-            <p>My passion: I LOVE music - it's one of the most powerful and diverse methods for expression & communication. I hope to be able to go to more live concerts in the future.</p>
+        <div id="div-2" class="flex-items">
+            <p>My passion: I LOVE music - it's one of the most powerful and diverse methods for expression &
+                communication. I hope to be able to go to more live concerts in the future.</p>
         </div>
-        <div class="div-3">
-           <p>A fun fact: As a true Southern Californian, when giving directions I really do say 'the' before naming different freeways! "Take the 5 to the 57 to the 91..."</p>
+        <div id="div-3" class="flex-items">
+            <p>A fun fact: As a true Southern Californian, when giving directions I really do say 'the' before naming
+                different freeways! "Take the 5 to the 57 to the 91..."</p>
         </div>
+        <footer>
+           
+        </footer>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
